@@ -13,6 +13,7 @@ max_iso_size=900000000
 min_disk_space_mb=3000
 min_memory_mb=256
 support=http://www.ubuntu.com/support
+installation_dir=ubuntu
 
 [Ubuntu-i386]
 arch=i386
